--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,9 +12,9 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.ITE393Exam"
         tools:targetApi="31">
-        <activity
-            android:name=".MainActivity2"
-            android:exported="false" />
+        <activity android:name=".scholarships.SchDescriptionsActivity"/>
+        <activity android:name=".scholarships.ScholarshipPage2"/>
+        <activity android:name=".scholarships.ScholarshipPage1"/>
         <activity
             android:name=".MainActivity"
             android:exported="true">
