Add Map page 2 and floor plans; buttons partially working

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -24,7 +24,8 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".MapActivity" />
+        <activity android:name=".map.MapActivity" />
+        <activity android:name=".map.MapMenuActivity" />
 
         <meta-data
             android:name="com.google.android.geo.API_KEY"
