--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -26,6 +26,7 @@
         </activity>
         <activity android:name=".modalities.ModalitiesActivity" />
         <activity android:name=".modalities.UrdanetaCampus" />
+        <activity android:name=".modalities.RemoteCoursesActivity" />
         <activity android:name=".map.MapActivity" />
         <activity android:name=".map.MapMenuActivity" />
         <activity android:name=".courses.AlliedHealthActivity" />
