Polish ProfileActivity.kt - Automatically adjust UI (or pan to the focused EditText) when keyboard is shown/hidden - Custom spinners for better visibility - Added error toast messages when selecting unavailable campuses - Input mask for contact number (using a 3rd party library called input-mask-android)

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -22,7 +22,10 @@
             </intent-filter>
         </activity>
 
-        <activity android:name=".ProfileActivity" />
+        <activity
+            android:name=".ProfileActivity"
+            android:windowSoftInputMode="adjustPan" />
+<!--        ^ automatically adjusts UI (or pans to the focused EditText) when keyboard is shown/hidden-->
 
         <activity android:name=".map.MapActivity" />
         <activity android:name=".map.MapMenuActivity" />
