Add Event-Related Activities and Update Manifest
- Added `EventDetails`, `AllEvents`, and `EventList` activities for handling event-related functionalities.
- Registered the new activities (`EventDetails`, `AllEvents`, `EventList`) in `AndroidManifest.xml`.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -53,6 +53,10 @@
         <activity android:name=".scholarships.ScholarshipPage2"/>
         <activity android:name=".scholarships.ScholarshipPage1"/>
 
+        <activity android:name=".event.EventList"/>
+        <activity android:name=".event.AllEvents"/>
+        <activity android:name=".event.EventDetails"/>
+
         <meta-data
             android:name="com.google.android.geo.API_KEY"
             android:value="${MAPS_KEY}" />
