Implement Bottom Navigation, Drawer Navigation, and Top App Bar with New Activities
- Added `DrawerNavigationHelper` and `TopAppBarHelper` for managing drawer and top app bar navigation, respectively.
- Created `drawer_menu.xml` for defining the drawer menu items.
- Implemented `drawer_header.xml` for the header of the drawer layout.
- Added a profile action in the top app bar through `top_app_bar_menu.xml`.
- Updated `AndroidManifest.xml` to include `CalendarActivity`, `Manual`, and `Support` activities.
- Modified `styles.xml` to customize the bottom navigation view style, including item size, padding, background color, and text color, using a custom `BottomNavigationView` style.
- Modified `BottomNavigationHelper` to include new activities and use `Home`, `CalendarActivity`, and `Manual`.
- Created `bottom_nav.xml` for defining bottom navigation items and updated navigation icons.
- Add new icons

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -55,6 +55,10 @@
 
         <activity android:name=".home.Home"/>
 
+        <activity android:name=".calendar.CalendarActivity"/>
+        <activity android:name=".manual.Manual"/>
+        <activity android:name=".support.Support"/>
+
         <activity android:name=".event.EventList"/>
         <activity android:name=".event.AllEvents"/>
         <activity android:name=".event.EventDetails"/>
