--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -61,6 +61,7 @@
         <activity android:name=".event.EventList"/>
         <activity android:name=".event.AllEvents"/>
         <activity android:name=".event.EventDetails"/>
+        <activity android:name=".event.AddUserEvent"/>
 
         <meta-data
             android:name="com.google.android.geo.API_KEY"
