--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -58,6 +58,10 @@
 
         <activity android:name=".home.Home"/>
 
+        <activity android:name=".calendar.CalendarActivity"/>
+
+        <activity android:name=".manual.Manual"/>
+
         <activity android:name=".event.EventList"/>
         <activity android:name=".event.AllEvents"/>
         <activity android:name=".event.EventDetails"/>
