--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -33,7 +33,7 @@
         </activity>
         <activity android:name=".landingpage.SchoolSelection" />
         <activity
-            android:name=".ProfileActivity"
+            android:name=".EditProfile"
             android:windowSoftInputMode="adjustPan" /> <!-- ^ automatically adjusts UI (or pans to the focused EditText) when keyboard is shown/hidden -->
         <activity android:name=".map.MapActivity" />
         <activity android:name=".map.MapMenuActivity" />
@@ -64,7 +64,8 @@
 
         <meta-data
             android:name="com.google.android.geo.API_KEY"
-            android:value="${MAPS_KEY}" />
+            android:value="${MAPS_KEY}"
+            />
     </application>
 
 </manifest>
