--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -18,6 +18,7 @@
         <activity
             android:name=".marketing.VideoPlayerActivity"
             android:exported="false" />
+        <activity android:name=".chat.ChatActivity"/>
         <activity
             android:name=".marketing.Marketing"
             android:exported="false" />
