--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools" >
+    xmlns:tools="http://schemas.android.com/tools">
 
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
@@ -14,23 +14,27 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.studenthandbookapp"
-        tools:targetApi="31" >
+        tools:targetApi="31">
+
         <activity
-            android:name=".marketing.VideoPlayerActivity"
-            android:exported="false" />
-        <activity android:name=".chat.ChatActivity"/>
-        <activity
-            android:name=".marketing.Marketing"
-            android:exported="false" />
-        <activity
-            android:name=".landingpage.Login"
+            android:name=".splash.SplashActivity"
             android:exported="true"
-            android:windowSoftInputMode="adjustResize" >
+            >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity
+            android:name=".marketing.VideoPlayerActivity"
+            android:exported="false" />
+        <activity android:name=".chat.ChatActivity" />
+        <activity
+            android:name=".marketing.Marketing"
+            android:exported="false" />
+        <activity
+            android:name=".landingpage.Login"
+            android:exported="true"/>
         <activity android:name=".landingpage.SchoolSelection" />
         <activity
             android:name=".EditProfile"
@@ -51,10 +55,12 @@
         <activity android:name=".courses.EducAndLibArtsActivity" />
         <activity android:name=".courses.InfoTechActivity" />
         <activity android:name=".courses.ManagementAccountancyActivity" />
-        <activity android:name=".scholarships.SchDescriptionsActivity"
-            android:parentActivityName=".scholarships.ScholarshipPage2"/>
-        <activity android:name=".scholarships.ScholarshipPage2"
-            android:parentActivityName=".scholarships.ScholarshipPage1"/>
+        <activity
+            android:name=".scholarships.SchDescriptionsActivity"
+            android:parentActivityName=".scholarships.ScholarshipPage2" />
+        <activity
+            android:name=".scholarships.ScholarshipPage2"
+            android:parentActivityName=".scholarships.ScholarshipPage1" />
         <activity android:name=".scholarships.ScholarshipPage1" />
         <activity android:name=".home.Home" />
         <activity android:name=".calendar.CalendarActivity" />
@@ -66,8 +72,7 @@
 
         <meta-data
             android:name="com.google.android.geo.API_KEY"
-            android:value="${MAPS_KEY}"
-            />
+            android:value="${MAPS_KEY}" />
     </application>
 
 </manifest>
